profilelist1exp/unpackaged/objects/Renewal_Software_Hardware__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Renewals (HW/SW)</relationshipLabel>
        <relationshipName>Renewals_Software_Hardware</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lattice_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipLabel>Renewals (HW/SW)</relationshipLabel>
        <relationshipName>Renewals_Software_Hardware</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Renewals (HW/SW)</relationshipLabel>
        <relationshipName>Renewals_Software_Hardware</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Date__c</fullName>
        <label>Renewal Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tag_Serial_Number__c</fullName>
        <label>Tag/Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Renewal (HW/SW)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Renewal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewals (HW/SW)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>